# TFHE-rs-Applications

./: .gitignore  Cargo.toml  README.md
cardio_application/: Cargo.toml
cardio_application/src/: cardio_application.rs  keys.rs  main.rs
min/: Cargo.toml
min/src/: main.rs  min.rs
src/: cardio_application.rs  keys.rs  main.rs
