[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { git = "https://github.com/zama-ai/tfhe-rs", branch = "new-front-bivarfix", features = ["shortint", "x86_64-unix"] }
bincode = "1.3.3"

[profile.release]
lto = "fat"
opt-level = 3